<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
    >

        <TextView
                android:textAppearance="@style/AppTheme.TextAppearance.SplashSubHeader"
                android:text="@string/welcome_desc"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/welcomeDescription"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintTop_toBottomOf="@+id/welcomeTitle"
                app:layout_constraintVertical_bias="0.0"/>

        <TextView
                android:textAppearance="@style/AppTheme.TextAppearance.SplashHeader"
                android:text="@string/welcomeTitle"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/welcomeTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/splashLogo"
                app:layout_constraintVertical_bias="0.0"/>
        <ImageView
                android:id="@+id/splashLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/app_logo"
                tools:src="@mipmap/ic_launcher_round"
                app:layout_constraintVertical_bias=".1"
        />




    </android.support.constraint.ConstraintLayout>
</layout>
