<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
tools:background="@color/colorPrimaryDark">

    <TextView
            android:textAppearance="@style/AppTheme.TextAppearance.SplashSubHeader"
            android:text="@string/welcome_desc"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/welcomeDescription"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTitle"
            app:layout_constraintVertical_bias="0.0"
            android:alpha="100"
            android:visibility="visible"
    />

    <com.google.android.gms.common.SignInButton android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/signInGoogle"
    app:layout_constraintTop_toBottomOf="@id/welcomeDescription"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintVertical_bias="0"
    android:layout_marginTop="16dp"
    app:buttonSize="wide"
    android:visibility="visible"
    android:alpha="100"/>

    <TextView
            android:alpha="100"
            android:textAppearance="@style/AppTheme.TextAppearance.SplashHeader"
            android:text="@string/welcomeTitle"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/welcomeTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/splashLogo"
            app:layout_constraintVertical_bias="0.0"
            android:visibility="visible"
    />

    <ImageView
            android:id="@+id/splashLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX=".6"
            android:scaleY=".6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/temp_splash_logo"
            app:layout_constraintVertical_bias=".0"
    />

</android.support.constraint.ConstraintLayout>