<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="com.ms8.smartirhub.android.SplashActivity.State"/>
        <variable name="state" type="State"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/splashContainer"
            android:animateLayoutChanges="true"
    >

        <TextView
                android:textAppearance="@style/AppTheme.TextAppearance.SplashSubHeader"
                android:text="@string/welcome_desc"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/welcomeDescription"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintTop_toBottomOf="@+id/welcomeTitle"
                app:layout_constraintVertical_bias="0.0"
                android:alpha="0"
                android:visibility="gone"
                tools:visibility="gone"
        />

        <TextView
                android:textAppearance="@style/AppTheme.TextAppearance.SplashHeader"
                android:text="@string/welcomeTitle"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/welcomeTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:alpha="0"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/splashLogo"
                app:layout_constraintVertical_bias="0.0"
                android:visibility="gone"
                tools:visibility="gone"
        />

        <com.google.android.gms.common.SignInButton android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/signInGoogle"
                                                    app:layout_constraintTop_toBottomOf="@id/welcomeDescription"
                                                    app:layout_constraintStart_toStartOf="parent"
                                                    app:layout_constraintEnd_toEndOf="parent"
                                                    app:layout_constraintBottom_toBottomOf="parent"
                                                    app:layout_constraintVertical_bias="0"
                                                    android:layout_marginTop="16dp"
                                                    app:buttonSize="wide"
        android:visibility="gone"
        android:alpha="0"/>

        <ImageView
                android:id="@+id/splashLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/temp_splash_logo"
                app:layout_constraintVertical_bias="0.5"
        />

    </android.support.constraint.ConstraintLayout>
</layout>
